# code-spark

./: .env  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  TODO.md  deploy-checks.py  pyproject.toml
code_spark/: Dockerfile  fly.toml  manage.py  pyproject.toml
code_spark/app/: models.py  views.py
code_spark/app/migrations/: 0001_initial.py  0002_alter_matchrequest_match_request_receiver_and_more.py
code_spark/app/templates/: base.html  home.html  login.html  match.html  matches.html
code_spark/app/templates/app/: base.html  home.html  login.html  match.html  matches.html
code_spark/code_spark/: asgi.py  example_settings_example.py  urls.py  wsgi.py
migrations/2023-08-16-154540_users/: down.sql  up.sql
sandbox/: data_design.md  database.sql
src/: main.rs  schema.rs
src/models/: mod.rs
src/services/: mod.rs
templates/: users.html.hbs
